# amazon-price-tracker

./: Makefile  README.md  bot.py  fetch_flipkart.py  flipkart_page.html  items.json  price_history.json  pyproject.toml  test_tracker.py  tracker.py  verify_flow.py
scrapers/: __init__.py  amazon.py  flipkart.py  myntra.py  utils.py
tests/: test_bot.py  test_tracker.py
